--- a/lib/toshi/web/views/layout.erb
+++ b/lib/toshi/web/views/layout.erb
@@ -19,7 +19,7 @@
   <meta itemprop="description" content="Toshi is a built on top of Ruby and PostgreSQL. It’s 100% Open source">
   <meta itemprop="image" content="https://coinbase.com/assets/toshi/og-toshi.jpg">
 
-  <link rel="shortcut icon" href="/images/favicon1.ico">
+  <link rel="shortcut icon" href="/images/favicon.ico">
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="js/plugins.js"></script>
