--- a/lib/toshi/web/views/layout.erb
+++ b/lib/toshi/web/views/layout.erb
@@ -9,14 +9,14 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/css/admin.css">
-  <link rel="shortcut icon" href="images/favicon1.ico">
+  <link rel="shortcut icon" href="images/favicon.ico">
 
   <meta property="og:title" content="Toshi - Open source Bitcoin Node">
-  <meta property="og:description" content="Toshi is a built on top of Ruby and PostgreSQL. It’s 100% Open source">
+  <meta property="og:description" content="A full bitcoin node for building web applications.">
   <meta property="og:image" content="https://coinbase.com/assets/toshi/og-toshi.jpg">
   <meta property="og:type" content="website">
   <meta itemprop="name" content="Toshi - Open source Bitcoin Node">
-  <meta itemprop="description" content="Toshi is a built on top of Ruby and PostgreSQL. It’s 100% Open source">
+  <meta itemprop="description" content="A full bitcoin node for building web applications.">
   <meta itemprop="image" content="https://coinbase.com/assets/toshi/og-toshi.jpg">
 
   <link rel="shortcut icon" href="/images/favicon.ico">
