--- a/docs/source/layouts/layout.erb
+++ b/docs/source/layouts/layout.erb
@@ -59,7 +59,7 @@ under the License.
             <a class="navbar-brand" href="#">Toshi</a>
             <ul class="nav navbar-nav">
                 <li class="active"><a href="/">Home</a></li>
-                <li><a href="/documentation">Documentation</a></li>
+                <li><a href="/docs">Documentation</a></li>
                 <li><a href="https://github.com/coinbase/toshi">GitHub</a></li>
               </ul>
           </div><!-- /.navbar-collapse -->
