--- a/lib/toshi/web/views/index.erb
+++ b/lib/toshi/web/views/index.erb
@@ -122,10 +122,10 @@
 
     <div class="col-md-4 col-lg-offset-1">
       <div class="toshi_links">
-        <iframe src="http://ghbtns.com/github-btn.html?user=coinbase&repo=toshi&type=watch&count=true"
+        <iframe src="/github-btn.html?user=coinbase&repo=toshi&type=watch&count=true"
         allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
 
-        <iframe src="http://ghbtns.com/github-btn.html?user=coinbase&repo=toshi&type=fork&count=true"
+        <iframe src="/github-btn.html?user=coinbase&repo=toshi&type=fork&count=true"
         allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
       </div>
       <div class="section_title clearfix">
