--- a/lib/toshi/web/views/layout.erb
+++ b/lib/toshi/web/views/layout.erb
@@ -37,7 +37,7 @@
         </div>
         <div class="col-md-7 features">
           <div class="text-left">
-            <h3>A full bitcoin node for building web applications.</h3>
+            <h3>An open source Bitcoin node built to power large scale web applications.</h3>
             <p>Toshi is a complete implementation of the bitcoin protocol, written in Ruby and backed by PostgreSQL.</p>
           </div>
         </div>
